--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,12 +1,12 @@
-# Ce workflow utilise des actions qui ne sont pas certifiées par GitHub.
-# Elles sont fournies par un tiers et sont régies par
-# des conditions de service, une politique de confidentialité et une documentation de support séparées.
-
 name: Build and Release Warship-Battle
 
 on:
   push:
     branches: [ "main" ]
+
+permissions:
+  contents: write  # Permet d'écrire dans le contenu, y compris la création de releases
+  packages: write   # Si vous utilisez également des packages
 
 jobs:
   build:
