--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Executable
+name: Build Executable for Multiple Platforms
 
 on:
   push:
@@ -12,38 +12,92 @@ on:
         default: "3.10"
 
 jobs:
-  build:
+  build-macos:
     runs-on: macos-latest
 
     steps:
-    # Étape 1 : Checkout du code
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # Étape 2 : Configurer Python
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: ${{ inputs.python_version }}
 
-    # Étape 3 : Installer les dépendances
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    # Étape 4 : Installer PyInstaller
     - name: Install PyInstaller
       run: pip install pyinstaller
 
-    # Étape 5 : Compiler le projet
-    - name: Build with PyInstaller
+    - name: Build for macOS
       run: |
         pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
 
-    # Étape 6 : Sauvegarder l'exécutable comme artefact
-    - name: Upload artifact
+    - name: Upload macOS executable as artifact
       uses: actions/upload-artifact@v3
       with:
-        name: executable
+        name: macos-executable
         path: dist/main
+
+  build-linux:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ inputs.python_version }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Install PyInstaller
+      run: pip install pyinstaller
+
+    - name: Build for Linux
+      run: |
+        pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
+
+    - name: Upload Linux executable as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: linux-executable
+        path: dist/main
+
+  build-windows:
+    runs-on: windows-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ inputs.python_version }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Install PyInstaller
+      run: pip install pyinstaller
+
+    - name: Build for Windows
+      run: |
+        pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
+
+    - name: Upload Windows executable as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: windows-executable
+        path: dist/main.exe
