--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,7 @@ jobs:
     - name: Build for macOS
       run: |
         pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
+        chmod +x dist/main  # Ajoute la permission d'exécution
 
     - name: Upload macOS executable as artifact
       uses: actions/upload-artifact@v3
@@ -65,6 +66,7 @@ jobs:
     - name: Build for Linux
       run: |
         pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
+        chmod +x dist/main  # Ajoute la permission d'exécution
 
     - name: Upload Linux executable as artifact
       uses: actions/upload-artifact@v3
