--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,79 +35,14 @@ jobs:
     - name: Build for macOS
       run: |
         pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
-        
-        # Vérifier les permissions avant d'ajouter le chmod
-        ls -l dist/main
 
-        # Ajouter la permission d'exécution
-        chmod +x dist/main
+    # Créer une archive tar qui préserve les permissions
+    - name: Create tar archive
+      run: |
+        tar -czf dist/main.tar.gz -C dist main
         
-        # Vérifier les permissions après le chmod
-        ls -l dist/main
-
     - name: Upload macOS executable as artifact
       uses: actions/upload-artifact@v3
       with:
         name: macos-executable
-        path: dist/main
-
-  build-linux:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ inputs.python_version }}
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Install PyInstaller
-      run: pip install pyinstaller
-
-    - name: Build for Linux
-      run: |
-        pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
-        chmod +x dist/main  # Ajoute la permission d'exécution
-
-    - name: Upload Linux executable as artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: linux-executable
-        path: dist/main
-
-  build-windows:
-    runs-on: windows-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ inputs.python_version }}
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Install PyInstaller
-      run: pip install pyinstaller
-
-    - name: Build for Windows
-      run: |
-        pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
-
-    - name: Upload Windows executable as artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: windows-executable
-        path: dist/main.exe
+        path: dist/main.tar.gz
