--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Executable for Multiple Platforms
+name: Build Executable
 
 on:
   push:
@@ -12,108 +12,53 @@ on:
         default: "3.10"
 
 jobs:
-  build-macos:
-    runs-on: macos-latest
+  build:
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+        python-version: [3.10]
 
     steps:
+    # Étape 1 : Checkout du code
     - name: Checkout code
       uses: actions/checkout@v3
 
+    # Étape 2 : Configurer Python
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ inputs.python_version }}
+        python-version: ${{ matrix.python-version }}
 
+    # Étape 3 : Installer les dépendances
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    # Étape 4 : Installer PyInstaller
     - name: Install PyInstaller
       run: pip install pyinstaller
 
-    - name: Build for macOS
+    # Étape 5 : Compiler le projet
+    - name: Build with PyInstaller
       run: |
-        pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
+        if [[ "$RUNNER_OS" == "Linux" ]]; then
+          pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
+        elif [[ "$RUNNER_OS" == "macOS" ]]; then
+          pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
+          # Créer une archive tar.gz sur macOS
+          tar -czvf dist/main.tar.gz -C dist main
+        elif [[ "$RUNNER_OS" == "Windows" ]]; then
+          pyinstaller --onefile --add-data "img/skins/*;img/skins" main.py
+        fi
 
-    # Créer une archive tar qui préserve les permissions
-    - name: Create tar archive for macOS
-      run: |
-        tar -czf dist/main-macos.tar.gz -C dist main
-
-    - name: Upload macOS executable as artifact
+    # Étape 6 : Sauvegarder l'exécutable comme artefact
+    - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
-        name: macos-executable
-        path: dist/main-macos.tar.gz
-
-  build-linux:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ inputs.python_version }}
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Install PyInstaller
-      run: pip install pyinstaller
-
-    - name: Build for Linux
-      run: |
-        pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
-        chmod +x dist/main  # Ajoute la permission d'exécution
-
-    # Créer une archive tar qui préserve les permissions
-    - name: Create tar archive for Linux
-      run: |
-        tar -czf dist/main-linux.tar.gz -C dist main
-
-    - name: Upload Linux executable as artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: linux-executable
-        path: dist/main-linux.tar.gz
-
-  build-windows:
-    runs-on: windows-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ inputs.python_version }}
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Install PyInstaller
-      run: pip install pyinstaller
-
-    - name: Build for Windows
-      run: |
-        pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
-
-    # Créer une archive tar pour Windows
-    - name: Create tar archive for Windows
-      run: |
-        tar -czf dist/main-windows.tar.gz -C dist main.exe
-
-    - name: Upload Windows executable as artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: windows-executable
-        path: dist/main-windows.tar.gz
+        name: executable-${{ matrix.os }}
+        path: |
+          dist/main
+          dist/main.tar.gz  # Inclure le tar.gz pour macOS
