--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
-        python-version: [3.10]
+        python-version: [3.10]  # Remplacer 3.1 par une version plus récente (3.10 par exemple)
 
     steps:
     # Étape 1 : Checkout du code
