--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Executable
+name: Build Executable for Multiple Platforms
 
 on:
   push:
@@ -12,53 +12,103 @@ on:
         default: "3.10"
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-        python-version: [3.10]  # Remplacer 3.1 par une version plus récente (3.10 par exemple)
+  build-macos:
+    runs-on: macos-latest
 
     steps:
-    # Étape 1 : Checkout du code
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # Étape 2 : Configurer Python
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: ${{ inputs.python_version }}
 
-    # Étape 3 : Installer les dépendances
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    # Étape 4 : Installer PyInstaller
     - name: Install PyInstaller
       run: pip install pyinstaller
 
-    # Étape 5 : Compiler le projet
-    - name: Build with PyInstaller
+    - name: Build for macOS
       run: |
-        if [[ "$RUNNER_OS" == "Linux" ]]; then
-          pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
-        elif [[ "$RUNNER_OS" == "macOS" ]]; then
-          pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
-          # Créer une archive tar.gz sur macOS
-          tar -czvf dist/main.tar.gz -C dist main
-        elif [[ "$RUNNER_OS" == "Windows" ]]; then
-          pyinstaller --onefile --add-data "img/skins/*;img/skins" main.py
-        fi
+        pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
 
-    # Étape 6 : Sauvegarder l'exécutable comme artefact
-    - name: Upload artifact
+    # Créer une archive tar qui préserve les permissions
+    - name: Create tar archive for macOS
+      run: |
+        tar -czf dist/main-macos.tar.gz -C dist main
+
+    - name: Upload macOS executable as artifact
       uses: actions/upload-artifact@v3
       with:
-        name: executable-${{ matrix.os }}
-        path: |
-          dist/main
-          dist/main.tar.gz  # Inclure le tar.gz pour macOS
+        name: macos-executable
+        path: dist/main-macos.tar.gz
+
+  build-linux:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ inputs.python_version }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Install PyInstaller
+      run: pip install pyinstaller
+
+    - name: Build for Linux
+      run: |
+        pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
+        chmod +x dist/main  # Ajoute la permission d'exécution
+
+    - name: Upload Linux executable as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: linux-executable
+        path: dist/main
+
+  build-windows:
+    runs-on: windows-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ inputs.python_version }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Install PyInstaller
+      run: pip install pyinstaller
+
+    - name: Build for Windows
+      run: |
+        pyinstaller --onefile --add-data "img/skins/*:img/skins" main.py
+
+    # Créer une archive tar pour Windows
+    - name: Create tar archive for Windows
+      run: |
+        tar -czf dist/main-windows.tar.gz -C dist main.exe
+
+    - name: Upload Windows executable as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: windows-executable
+        path: dist/main-windows.tar.gz
