--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,13 @@ jobs:
         name: macos-executable
         path: dist/main-macos.tar.gz
 
+    - name: Create Release on GitHub
+      uses: softprops/action-gh-release@v1
+      with:
+        files: dist/main-macos.tar.gz
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   build-linux:
     runs-on: ubuntu-latest
 
@@ -77,6 +84,13 @@ jobs:
       with:
         name: linux-executable
         path: dist/main
+
+    - name: Create Release on GitHub
+      uses: softprops/action-gh-release@v1
+      with:
+        files: dist/main
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-windows:
     runs-on: windows-latest
@@ -112,3 +126,10 @@ jobs:
       with:
         name: windows-executable
         path: dist/main-windows.tar.gz
+
+    - name: Create Release on GitHub
+      uses: softprops/action-gh-release@v1
+      with:
+        files: dist/main-windows.tar.gz
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
